<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="0dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_Baslık"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="casual"
        android:text="@string/gezegende_kac_kilosun"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <CheckBox
        android:id="@+id/cb_neptün"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:text="@string/nept_n"
        app:layout_constraintBaseline_toBaselineOf="@+id/cb_mars"
        app:layout_constraintEnd_toStartOf="@+id/cb_uranüs"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cb_mars" />

    <EditText
        android:id="@+id/editKiloDegeri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_text_background"
        android:ems="15"
        android:hint="@string/weight_in_world"
        android:inputType="textPersonName"
        android:textColor="#00b0ff"
        android:textColorHint="#fafafa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_neptün" />

    <TextView
        android:id="@+id/Result_Weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="casual"
        android:shadowColor="@android:color/background_dark"
        android:text="test"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editKiloDegeri" />

    <CheckBox
        android:id="@+id/cb_mars"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/mars"
        app:layout_constraintEnd_toStartOf="@+id/cb_neptün"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_Baslık" />

    <CheckBox
        android:id="@+id/cb_uranüs"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/uranus"
        app:layout_constraintBaseline_toBaselineOf="@+id/cb_neptün"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cb_neptün" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="150dp"

        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/planets" />

</androidx.constraintlayout.widget.ConstraintLayout>